--- a/css/reset.css
+++ b/css/reset.css
@@ -603,3 +603,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
