--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,16 @@ body {
   grid-template-rows: 75px 1fr 1fr auto auto auto auto auto auto; /*8 columnas, 9 lineas*/ /*Definimos valores fijos para algunas filas y para otras dejamos que se ajusten automáticamente al contenido de cada sección que ocupe cada fila.*/
   background-color: var(--body-bg);
 }
-
+body::-webkit-scrollbar {
+  display: none;
+}
 /*------------------HEADER----------------*/
 header.encabezado {
+  position: fixed;
   grid-row: 1/2;
+  width: 100%;
   grid-column: 1/4;
-  z-index: 1;
+  z-index: 150;
 }
 /*------------------HEADER----------------*/
 
@@ -164,6 +168,7 @@ nav ul.listaMenuEncabezado {
   position: absolute;
   top: 0rem;
   left: 0rem;
+  height: 100vh;
   width: 100px;
   bottom: 0;
   background-color: var(--color-blanco);
@@ -184,7 +189,7 @@ el usuario haga click*/
 .btnCierraMenu.visible {
   display: block;
   position: absolute;
-  z-index: 1;
+  z-index: 100;
 }
 /*------------------CLASES JS----------------*/
 
@@ -321,7 +326,7 @@ div .divBannerTienda {
   background-repeat: no-repeat;
   background-attachment: scroll;
   opacity: 0.5;
-  z-index: 0;
+  z-index: 10;
 }
 /*##### BANNER DIVIDE SECCIÓN #####*/
 
@@ -360,7 +365,6 @@ section.carrouselOfertas {
   cursor: pointer;
   top: 350px;
   position: absolute;
-  z-index: 1;
 }
 
 .slider-button.prev-button {
@@ -555,6 +559,7 @@ section.ingredientesSeccion {
   box-shadow: var(--box-shadow);
   transition: 0.15s ease-in;
   border-radius: 10px;
+
   animation-name: animacionredes;
   background-color: var(--color-secundario-turquesaclaro);
   animation-duration: 3s;
@@ -680,7 +685,6 @@ footer.mapadeSitioSeccion {
   display: flex;
   flex-direction: column;
   text-align: center;
-  grid-template-rows: 2fr 0.4fr;
   font-family: poppins;
   align-items: center;
   font-size: 14px;
@@ -739,14 +743,147 @@ footer {
 
 /*##### FOOTER MAPA DEL SITIO #####*/
 
-@media (max-width: 900px) {
+@media (min-width: 1024px) {
+  /*cuando tenga como mínimo este tamaño la pantalla, entonces se aplicarán esos estilos para tablet en adelante*/
+  /*tamaño tablet*/
   .carrouselOfertas .contenedorOfertas {
     width: calc(100% / 2);
     transform: scale(120%);
   }
+  nav.navegacionEncabezado {
+    grid-template-areas: "logo lista carrito";
+  }
+  nav ul.listaMenuEncabezado {
+    grid-area: lista;
+    display: flex;
+    align-items: center;
+    opacity: 1;
+    visibility: visible;
+    flex-direction: row;
+    padding: 8px;
+    height: 0;
+    width: 100%;
+    position: sticky;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
+    background-color: var(--body-bg);
+  }
+  .listaMenuEncabezado li {
+    padding: 8px;
+  }
+  nav button.btnAbreMenu,
+  button.btnCierraMenu {
+    display: none;
+  }
+  section.bannerLogo {
+    background: url(../images/panaderia.png);
+    background-size: cover;
+    background-position: 30%;
+  }
+  section.productoInteractivo {
+    padding-top: 1rem;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    height: auto;
+    align-content: center;
+    justify-content: space-around;
+  }
+  section h3.nombreProducto {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: left;
+  }
+  .contenedorProducto {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+  .listaMiniaturas {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    margin-left: 16px;
+    flex-direction: column;
+  }
+  .comprar {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  section .descripcionProducto {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    text-align: left;
+  }
+  .divisorSeccion {
+    grid-column: 1/4;
+    grid-row: 3/4;
+  }
+  div img.cupcakesFondo {
+    display: none;
+  }
+  .divBannerTienda {
+    height: 100%;
+    background-position: 20%;
+  }
+  .carrouselOfertas {
+    margin-top: 200px;
+  }
+  .carrouselOfertas .contenedorOfertas {
+    transform: scale(80%);
+    width: calc(100% / 2);
+  }
+  .galeriaCarousel {
+    align-items: flex-start;
+  }
+  .galeriaCarousel article {
+    margin-left: 40px;
+  }
+  .slider-button {
+    top: 300px;
+  }
+  section.ingredientesSeccion {
+    height: 600px;
+  }
+  .contenedorIngredientes {
+    padding-top: 10%;
+    height: 30%;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .ing h3 {
+    margin-bottom: 16px;
+  }
+  .newsletterSeccion {
+    flex-direction: row;
+    align-items: center;
+  }
+  .bannerLogoFin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  .bannerLogoFin img.imgLogoBanner {
+    width: 30%;
+  }
+  .mapadeSitioSeccion {
+    padding-top: 5%;
+  }
+  .mapadeSitioSeccion .nav-contenedor-mapeo {
+    display: flex;
+    align-items: center;
+  }
+  .nav-contactanos,
+  .nav-horarios,
+  .nav-navegacion {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    height: 100%;
+    margin: 30px;
+    padding: 8px;
+  }
 }
-
-@media (max-width: 550px) {
+@media (max-width: 767px) {
+  /*hasta este tamaño de pantalla se aplicarán los siguientes estilos*/
   .carrouselOfertas .contenedorOfertas {
     width: 100%;
   }
